# device-detection-java

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.example  GitVersion.yml  Java_Hash_Engine.cpp  Java_Pattern_Engine.cpp  PreBuild.bat  PreBuild.sh  README.md  build-and-publish.yml  build-and-test.yml  logback.xml  pom.xml
4.4/: _0Dexample-example.html  _getting_started_web_cloud_8java-example.html  _getting_started_web_on_prem_8java-example.html  _metadata_cloud_8java-example.html  _metadata_on_prem_8java-example.html  _performance_benchmark_8java-example.html  annotated.html  annotated.js  classfiftyone_1_1devicedetection_1_1_device_detection_cloud_pipeline_builder-members.html  classfiftyone_1_1devicedetection_1_1_device_detection_cloud_pipeline_builder.html  classfiftyone_1_1devicedetection_1_1_device_detection_cloud_pipeline_builder.js  classfiftyone_1_1devicedetection_1_1_device_detection_cloud_pipeline_builder__coll__graph.map  classfiftyone_1_1devicedetection_1_1_device_detection_cloud_pipeline_builder__coll__graph.md5  classfiftyone_1_1devicedetection_1_1_device_detection_on_premise_pipeline_builder-members.html  classfiftyone_1_1devicedetection_1_1_device_detection_on_premise_pipeline_builder.html  classfiftyone_1_1devicedetection_1_1_device_detection_on_premise_pipeline_builder.js  classfiftyone_1_1devicedetection_1_1_device_detection_on_premise_pipeline_builder__inherit__graph.map  classfiftyone_1_1devicedetection_1_1_device_detection_pipeline_builder-members.html  classfiftyone_1_1devicedetection_1_1_device_detection_pipeline_builder.html  classfiftyone_1_1devicedetection_1_1_device_detection_pipeline_builder.js  classfiftyone_1_1devicedetection_1_1_device_detection_pipeline_builder__coll__graph.map  classfiftyone_1_1devicedetection_1_1_enums.html  classfiftyone_1_1devicedetection_1_1cloud_1_1data_1_1_multi_device_data_cloud-members.html  classfiftyone_1_1devicedetection_1_1cloud_1_1data_1_1_multi_device_data_cloud.html  classfiftyone_1_1devicedetection_1_1cloud_1_1data_1_1_multi_device_data_cloud.js  classfiftyone_1_1devicedetection_1_1cloud_1_1data_1_1_multi_device_data_cloud__coll__graph.md5  classfiftyone_1_1devicedetection_1_1cloud_1_1data_1_1_multi_device_data_cloud__inherit__graph.map  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_data_cloud_internal-members.html  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_data_cloud_internal.html  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine-members.html  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine.html  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine.js  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine__coll__graph.map  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine__inherit__graph.map  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine_builder-members.html  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine_builder.html  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine_builder.js  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine_builder__coll__graph.map  classfiftyone_1_1devicedetection_1_1cloud_1_1flowelements_1_1_device_detection_cloud_engine_builder__inherit__graph.md5  (+593 more)
4.5/: _0Dexample-example.html  annotated.html  (+570 more)
device-detection.hash.engine.on-premise/src/main/cxx/: CMakeLists.txt  Java_Hash_Engine.cpp  PreBuild.bat  PreBuild.sh  hash_java.i
(+457 files in other folders)
